<resources>
    <string name="app_name">My Application</string>
    <string name="mainMenu">Главное меню</string>
    <string name="chooseOption">Выберите опцию</string>
    <string name="arrivalProduct">Приход товара</string>
    <string name="saleProduct">Продажа товара</string>
    <string name="productList">Список товаров</string>
    <string name="goBack">Назад</string>
    <string name="N">№</string>
    <string name="name">Наименование</string>
    <string name="category">Категория</string>
    <string name="unit">Ед. изм.</string>
    <string name="quantity">Кол-во</string>
    <string name="productArrival">Приход товара</string>
    <string name="dateText">Дата</string>
    <string name="product">Товар</string>
    <string name="priceText">Цена</string>
    <string name="result">Итог</string>
    <string name="revenue">Выручка</string>
    <string name="plus">+</string>
    <string name="addArrival">Добавление закупки</string>
    <string name="enterTheDate">"  Введите дату (дд.мм.гггг)"</string>
    <string name="productName">Наименование товара</string>
    <string name="enterTheProductName">"  Введите наименование товара"</string>
    <string name="enterTheCategory">"  Введите категорию товара"</string>
    <string name="enterTheUnit">"  Введите ед. измерения"</string>
    <string name="enterTheQuantity">"  Введите количество"</string>
    <string name="enterThePrice">"  Введите цену"</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="paymentMethod">Сп. оплаты</string>
    <string name="addSale">Добавление продажи</string>
    <string name="enterPaymentMethod">"  Введите способ оплаты"</string>
    <string name="addProduct">"Добавление товара"</string>
    <string-array name="payment_methods">
        <item>Наличный</item>
        <item>Терминал</item>
        <item>Перевод</item>
    </string-array>
    <string name="reports">Отчеты</string>
    <string name="choseDate">Выберите дату</string>
    <string name="getReport">Получить отчет</string>
    <string-array name="product_category">
        <item>Головной убор</item>
        <item>Верхняя одежда</item>
        <item>Нижнее белье</item>
        <item>Обувь</item>
        <item>Аксессуар</item>
    </string-array>
</resources>