<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addProductArrival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddProductArrival">

    <TextView
        android:id="@+id/addProductArrivalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:text="@string/addArrival"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/dateArrivalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0sp"
        android:text="@string/dateText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/addProductArrivalText"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editDateText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/enterTheDate"
        android:layout_below="@id/dateArrivalText"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:layout_marginHorizontal="50sp"
        android:inputType="date"/>

    <TextView
        android:id="@+id/productNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/productName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/editDateText"/>

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="50sp"
        style="@style/CustomSpinnerStyle"
        android:prompt="@string/enterTheProductName"
        android:layout_below="@+id/productNameText"/>

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/mySpinner"/>

    <EditText
        android:id="@+id/editCategory"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/enterTheCategory"
        android:layout_below="@id/categoryText"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:layout_marginHorizontal="50sp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/unitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/unit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/editCategory"/>

    <EditText
        android:id="@+id/editUnit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/enterTheUnit"
        android:layout_below="@id/unitText"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:layout_marginHorizontal="50sp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/editUnit"/>

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/enterTheQuantity"
        android:layout_below="@id/quantityText"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:layout_marginHorizontal="50sp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/priceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/priceText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/editQuantity"/>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/enterThePrice"
        android:layout_below="@id/priceText"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:layout_marginHorizontal="50sp"
        android:inputType="number"/>

    <Button
        android:id="@+id/cancel"
        android:layout_below="@id/editPrice"
        android:layout_width="120dp"
        android:layout_height="50sp"
        android:layout_marginStart="40sp"
        android:layout_marginTop="20sp"
        android:paddingHorizontal="10sp"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/grayButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/save"
        android:layout_below="@id/editPrice"
        android:layout_width="120dp"
        android:layout_height="50sp"
        android:layout_marginStart="250sp"
        android:layout_marginTop="20sp"
        android:paddingHorizontal="10sp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:onClick="save"/>

    <Button
        android:id="@+id/goBack"
        android:layout_below="@id/cancel"
        android:layout_width="120dp"
        android:layout_height="50sp"
        android:layout_marginStart="40sp"
        android:layout_marginTop="25sp"
        android:onClick="goBack"
        android:text="@string/goBack"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/grayButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</RelativeLayout>