<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/mainMenu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/chooseOptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/chooseOption"
        android:layout_below="@+id/mainMenuText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/arrivalProductButton"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_below="@+id/chooseOptionText"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="50sp"
        android:text="@string/arrivalProduct"
        android:onClick="goToProductArrival"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/greenButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/saleProductButton"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_below="@+id/arrivalProductButton"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="50sp"
        android:text="@string/saleProduct"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:onClick="goToProductSale"
        app:backgroundTint="@color/greenButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/productListButton"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_below="@+id/saleProductButton"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="51dp"
        android:onClick="goToProductList"
        android:text="@string/productList"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/greenButton"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</RelativeLayout>